Fix misaligned send button in Firefox (closes #37)

--- a/Web/css/rohbot.less
+++ b/Web/css/rohbot.less
@@ -46,7 +46,7 @@ body {
 	font-family: sans-serif;
 }
 
-body, h1 {
+body, h1, textarea {
 	.noSpacing;
 }
 
